Adding fixture loading/unloading functionality
Add Cypress custom commands to load and unload indices and data using fixture files, and adds the appropriate function calls in dashboard_filtering_spec.js to partially setup and tear down the test environment.

Signed-off-by: Aviv Benchorin <benchori@amazon.com>

--- a/.gitignore
+++ b/.gitignore
@@ -106,5 +106,7 @@ dist
 .DS_Store
 
 cypress/videos
-
+cypress/screenshots
+cypress/downloads
 cypress.env.json
+cypress/fixtures/dashboard/data/testFixtures
