--- a/package.json
+++ b/package.json
@@ -31,5 +31,6 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.24.0",
     "typescript": "^4.3.5"
-  }
+  },
+  "dependencies": {}
 }
