--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "functional test framework for OpenSearch-Dashboards",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm run lint",
+    "start": "serve --listen ${PORT:-8080}",
+    "e2e:chrome": "cypress run --browser --headless chrome"
   },
   "repository": {
     "type": "git",
