--- a/.github/workflows/cypress-chrome-docker-test.yml
+++ b/.github/workflows/cypress-chrome-docker-test.yml
@@ -17,6 +17,5 @@ jobs:
         uses: cypress-io/github-action@v2
         timeout-minutes: 10
         with:
-          build: npm run build
-          start: npm start
+          start: npm run e2e:chrome:headless
           browser: chrome
