--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run lint",
     "start": "serve --listen ${PORT:-8080}",
-    "e2e:chrome": "cypress run --browser --headless chrome"
+    "e2e:chrome:headless": "cypress run --browser --headless chrome"
   },
   "repository": {
     "type": "git",
