--- a/.github/workflows/cypress-chrome-docker-test.yml
+++ b/.github/workflows/cypress-chrome-docker-test.yml
@@ -9,7 +9,7 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     # https://github.com/cypress-io/cypress-docker-images
-    container: cypress/browsers:node12.18.3-chrome87-ff82
+    # container: cypress/browsers:node12.18.3-chrome87-ff82
     steps:
       - name: Set up JDK
         uses: actions/setup-java@v1
