--- a/.github/workflows/cypress-workflow-index-management-test.yml
+++ b/.github/workflows/cypress-workflow-index-management-test.yml
@@ -87,9 +87,9 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           working-directory: monterey
-          command: yarn run cypress run
+          command: yarn run cypress run --browser chrome
           wait-on: 'http://localhost:5601'
-          browser: chrome
+          # browser: chrome
       # Screenshots are only captured on failure, will change this once we do visual regression tests
       - uses: actions/upload-artifact@v1
         if: failure()
