--- a/.github/workflows/cypress-workflow-index-management-test.yml
+++ b/.github/workflows/cypress-workflow-index-management-test.yml
@@ -87,7 +87,7 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           working-directory: monterey
-          command: yarn run cypress run --browser chrome
+          command: yarn run cypress run --browser chrome --headless
           wait-on: 'http://localhost:5601'
           # browser: chrome
       # Screenshots are only captured on failure, will change this once we do visual regression tests
