--- a/.github/workflows/cypress-workflow-snapshot-based.yml
+++ b/.github/workflows/cypress-workflow-snapshot-based.yml
@@ -32,35 +32,23 @@ jobs:
           bin/opensearch &
           timeout 300 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:9200)" != "200" ]]; do sleep 5; done'
         #  sleep 300
-      - name: Checkout OpenSearch-Dashboards
-        uses: actions/checkout@v2
-        with:
-          repository: opensearch-project/OpenSearch-Dashboards
-          path: OpenSearch-Dashboards
-          ref: '1.0'
+      - name: Get OpenSearch-Dashboards
+        run: |
+          wget https://artifacts.opensearch.org/snapshots/core/opensearch-dashboards/1.0.0-SNAPSHOT/opensearch-dashboards-min-1.0.0-SNAPSHOT-linux-x64-latest.tar.gz
+          tar -xzf opensearch-dashboards-min-1.0.0-SNAPSHOT-linux-x64-latest.tar.gz
       - name: Get node and yarn versions
         id: versions
         run: |
-          echo "::set-output name=node_version::$(node -p "(require('./OpenSearch-Dashboards/package.json').engines.node).match(/[.0-9]+/)[0]")"
-          echo "::set-output name=yarn_version::$(node -p "(require('./OpenSearch-Dashboards/package.json').engines.yarn).match(/[.0-9]+/)[0]")"
+          echo "::set-output name=node_version::$(node -p "(require('./opensearch-dashboards-1.0.0-SNAPSHOT-linux-x64/package.json').engines.node).match(/[.0-9]+/)[0]")"
       - name: Setup node
         uses: actions/setup-node@v1
         with:
           node-version: ${{ steps.versions.outputs.node_version }}
           registry-url: 'https://registry.npmjs.org'
-      - name: Install correct yarn version for OpenSearch-Dashboards
-        run: |
-          npm uninstall -g yarn
-          echo "Installing yarn ${{ steps.versions_step.outputs.yarn_version }}"
-          npm i -g yarn@${{ steps.versions.outputs.yarn_version }}
-      - name: Bootstrap plugin/OpenSearch-Dashboards
-        run: |
-          cd OpenSearch-Dashboards
-          yarn osd bootstrap
       - name: Run OpenSearch-Dashboards server
         run: |
-          cd OpenSearch-Dashboards
-          yarn start --no-base-path --no-watch &
+          cd opensearch-dashboards-1.0.0-SNAPSHOT-linux-x64
+          bin/opensearch-dashboards --no-base-path --no-watch &
           timeout 300 bash -c 'while [[ "$(curl -s localhost:5601/api/status | jq -r '.status.overall.state')" != "green" ]]; do sleep 5; done'
         # sleep 300
         # for now just chrome, use matrix to do all browsers later
