--- a/.github/workflows/cypress-workflow-snapshot-based.yml
+++ b/.github/workflows/cypress-workflow-snapshot-based.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Run OpenSearch-Dashboards server
         run: |
           cd opensearch-dashboards-1.0.0-SNAPSHOT-linux-x64
-          bin/opensearch-dashboards --no-base-path --no-watch &
+          bin/opensearch-dashboards serve --no-base-path --no-watch &
           timeout 300 bash -c 'while [[ "$(curl -s localhost:5601/api/status | jq -r '.status.overall.state')" != "green" ]]; do sleep 5; done'
         # sleep 300
         # for now just chrome, use matrix to do all browsers later
