--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "functional test framework for OpenSearch-Dashboards",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run lint",
-    "start": "serve --listen ${PORT:-8080}",
-    "e2e:chrome:headless": "cypress run --browser --headless chrome"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -27,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "cypress": "^7.6.0",
+    "cypress-multi-reporters": "^1.5.0",
     "eslint": "^7.30.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-cypress": "^2.11.3",
@@ -34,6 +32,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.24.0",
+    "mocha-junit-reporter": "^2.0.0",
     "typescript": "^4.3.5"
   }
 }
